--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-09-29  Michael Hutchinson <mhutchinson@novell.com>
+
+	* sources/makefile, sources/gtksourceview2-sharp-sources.xml, 
+	  configure.in, gtksourceview/gtksourceview2-api.raw,
+	  gtksourceview2-sharp-sources.xml: Update version and API to 
+	  GtkSourceView 2.0.0.
+
 2007-09-11  Michael Hutchinson <mhutchinson@novell.com>
 
 	* sources/makefile,
