--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-15  Geoff Norton  <gnorton@novell.com>
+
+	* gtksourceview/Makefile.am: Compile against gtk-sharp-2.0 not gnome-sharp-2.0
+
 2007-11-15  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* sample/SourceViewTest.cs: List available styles in help message.
