--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-09  Jonathan Pryor  <jpryor@novell.com>
+
+	* doc/gtksourceview2-sharp-docs.source: Add a /monodoc/node element so 
+	  that documentation is inserted under the "Gnome Libraries" node.
+
 2007-11-16  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* sample/SourceViewTest.cs: List search paths in help message.
